# agent-rec

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEPRECATIONS.md  LICENSE  NOTICE  README.md  SECURITY.md  TODO.md  my-report-judge.html  my-report-judge.md  pyproject.toml  requirements.txt
agentrec/: __init__.py  capture.py  cli.py  comparators.py  importers.py  keying.py  migration.py  pricing.py  report.py  session.py  store.py  transport.py
corpus/: migration__openai_gpt-4o-mini_04345e5becaf4b35__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_05e4ebf8769f503c__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_06a1e8e45272403f__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_0a2b2c0e469ec41e__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_0d22317379c5e062__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_141ed5a1217f8d73__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_18e0f38c9da3089d__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_19e926d571acae85__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_1b7f67df4a19f8dc__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_1dd062aa5ebeed8f__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_1e2eb9c3465c2c3c__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_24c804c48a5838fd__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_25341ba9631034ad__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_253db1d8eda9896f__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_26aa18bfc0c746c4__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_2744ecabaeb33f82__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_2d57a74d193ceb50__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_30aaa018934ab03f__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_32756b2ec547c216__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_34bb8da117f20b0e__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_37d5392016c26bcf__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_39c0d06de1f8b940__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_3d25d5ef9bc6a08a__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_412d29f5627ab5da__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_434e72fafcaf8ad7__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_43a46c2898a7ac58__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_43b5d4942e1dbb79__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_448da0337efb9d3e__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_45756453e5e98b19__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_46a12c785e149290__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_499c03e5bb393348__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_508d047cade5d1a6__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_523ccefa131e4504__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_54c3d8c3eaa5f242__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_58b57d43a9724fed__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_5ae4f7a6438490f1__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_5f462a6b9a1687df__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_6250aff19d9ec734__to__claude-haiku-4-5.json  migration__openai_gpt-4o-mini_65084dc52867761c__to__claude-haiku-4-5.json  (+161 more)
(+40 files in other folders)
