[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrec"
version = "0.1.0"
description = "Framework-agnostic record/replay for streaming LLM API interactions"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["agentrec"]
