[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentrec"
version = "0.10.0"
description = "Framework-agnostic record/replay for LLM API interactions (streaming and non-streaming)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
keywords = ["llm", "openai", "anthropic", "gemini", "mistral", "httpx", "record", "replay", "vcr", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
]
# Core is provider-neutral: capture happens at the httpx transport, so the only
# runtime dependency is httpx.  The provider SDKs are dev-only (tests/examples).
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
agentrec = "agentrec.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
    "openai>=1.30",
    "anthropic>=0.40",
]
# Decoding cassettes whose responses were served with brotli/zstd
# content-encoding (gzip and deflate work out of the box).
compression = [
    "brotli>=1.1",
    "zstandard>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["agentrec"]
